trunk/Archive2/68/e3546b00eecfd8/main.cpp
#include <boost/xpressive/xpressive.hpp>

using namespace boost::xpressive;

int main()
{
    constexpr auto d = '<' >> optional('/') >> +_w >> '>';
}